# advent_of_code

./: Cargo.toml
aoc_2015/: Cargo.toml
aoc_2016/: Cargo.toml
aoc_2016/input/: day_09.txt  day_22.txt  day_23.txt  day_23_shortcut.txt  day_25_shortcut.txt
aoc_2017/: Cargo.toml
aoc_2018/: Cargo.toml
aoc_2019/: Cargo.toml
aoc_2019/input/: day_01.txt  day_05.txt  day_07.txt  day_08.txt  day_13.txt  day_15.txt  day_16.txt
aoc_2020/: Cargo.toml
aoc_2020/input/: day_06.txt  day_07.txt  day_21.txt
aoc_2021/: Cargo.toml
aoc_2022/: Cargo.toml
aoc_2022/input/: day_05.txt  day_14.txt  day_15.txt  day_16.txt
aoc_2023/: Cargo.toml
aoc_2024/: Cargo.toml
aoc_2025/: Cargo.toml
util/: Cargo.toml
util/src/: basic_parser.rs  chinese_remainders.rs  coord.rs  duet_tablet.rs  hashers.rs  intcode.rs  lib.rs  orientation.rs  registry.rs  wrist_device.rs
