[workspace]
resolver = "2"

members = [
    "util",
    "aoc_2015",
    "aoc_2016",
    "aoc_2017",
    "aoc_2018",
    "aoc_2019",
    "aoc_2020",
    "aoc_2021",
    "aoc_2022",
    "aoc_2023",
    "aoc_2024",
    "aoc_2025",
]

[workspace.dependencies]
bitvec = "1"
fxhash = "0.2.1"
itertools = "0.14.0"
md5 = "0.8.0"
nom = "8"
nom_permutation = "1.0.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
serde_json = "1.0"
z3 = "0.19"
