[package]
name = "aoc_2017"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
fxhash = "0.2.1"
md5 = "0.7.0"
itertools = "0.13.0"
nom = "7.1.3"
nom_permutation = "0.1.0"
rand = "0.8.5"
rayon = "1.7.0"
